2005-06-10  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac, NEWS: Increment version to 0.5.96, add news entry.

	* Release 0.5.95, Interface version 0.

2005-06-10  Al Riddoch  <alriddoch@zepler.org>

	* Makefile.am, configure.ac, Atlas/Makefile.am,
	  Atlas/Utilities/Makefile.am, Atlas/Utilities/atlas_convert.cpp,
	  tools/Makefile.am, tools/atlas_convert.cpp: Move atlas_convert
	  out of the library tree into a tools directory of its own.

	* atlas-cpp.spec.in: Remove dependency on libstdc++ package.

2005-05-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/Anonymous.h, Atlas/Objects/Dispatcher.cpp,
	  Atlas/Objects/Dispatcher.h, Atlas/Objects/ObjectsFwd.h,
	  Atlas/Objects/Operation.h, Atlas/Objects/RootOperationChildren2.cpp,
	  Atlas/Objects/RootOperationChildren3.cpp,
	  Atlas/Objects/RootOperationChildren4.cpp,
	  Atlas/Objects/RootOperationChildren5.cpp,
	  Atlas/Objects/flag.cpp, Atlas/Objects/objectFactory.cpp:
	  Re-generate objects included new Wield and Touch ops from
	  the updated spec.

2005-05-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/Makefile.am: Move objectFactory.cpp into the generated
	  sources section as it should be.

	* Atlas/Objects/SmartPtr.h: Remove the factory() method as it clutters
	  the API, and causes a problem with gcc 4.

	* Atlas/Objects/objectFactory.cpp, Atlas/Objects/objectFactory.h,
	  Atlas/Objects/GenerateObjectFactory.py: Use an inlined template
	  factory function rather than the one removed from SmartPtr.

	* tests/Objects/custom_ops.cpp: Update the code demonstrating how
	  to create and install custom op types.

	* tests/Objects/objects2.cpp: Modify code that tested using factory
	  method to create instances.

2005-05-07  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.5.95, Interface version 0.

2005-05-07  Al Riddoch  <alriddoch@zepler.org>

	* NEWS: Update for upcoming release.

	* atlas-cpp.spec.in: Tweak BuildRoot to match fedora guidelines.
