@@ -1,3 +1,12 @@
+2005-06-14  Al Riddoch  <alriddoch@zepler.org>
+
+	* Atlas/Objects/AttributeInfo.py,
+	  Atlas/Objects/GenerateObjectFactory.py,
+	  Atlas/Objects/RootOperation.h, Atlas/Objects/flag.cpp,
+	  Atlas/Objects/objectFactory.cpp, Atlas/Objects/objectFactory.h,
+	  tests/Objects/objects2.cpp: Remove obsolete
+	  messageElement2ClassObject().
+
 2005-06-10  Al Riddoch  <alriddoch@zepler.org>
 
 	* configure.ac, NEWS: Increment version to 0.5.96, add news entry.
